--- a/backend/product-service/package.json
+++ b/backend/product-service/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
-    "mongoose": "^4.13.21",
-    "mongoose-auto-increment": "^5.0.1"
+    "mongoose": "^4.13.21"
   }
 }
